time series update

--- a/static/repo/akek/r/courses/zaman-serileri-analizi/Hafta_1/Zaman_Serileri_Analizi_-_Hafta_1_Uygulama.Rmd
+++ b/static/repo/akek/r/courses/zaman-serileri-analizi/Hafta_1/Zaman_Serileri_Analizi_-_Hafta_1_Uygulama.Rmd
@@ -76,7 +76,7 @@ if("okara" %in% rownames(utils::installed.packages()) == FALSE) {suppressWarning
 suppressWarnings(suppressMessages(library("okara"))) ## okara paketi.
 
 # Gerekli paketlerin yüklenmesi.
-Load.Install(c("rstudioapi", "readxl", "plyr", "dplyr", "tidyr", "stringr", "stringi", "Hmisc", "reshape2", "scales", "lubridate", "ggplot2", "xtable", "DT", "latex2exp", "forecast", "WDI", "fpp2", "fpp3", "datasets", "quantmod", "FinYang/tsdl", "ggseas", "slider", "ecm"))
+Load.Install(c("rstudioapi", "readxl", "plyr", "dplyr", "tidyr", "stringr", "stringi", "Hmisc", "reshape2", "scales", "lubridate", "ggplot2", "xtable", "DT", "latex2exp", "forecast", "WDI", "fpp2", "fpp3", "datasets", "quantmod", "FinYang/tsdl", "ggseas", "slider", "ecm", "wooldridge"))
 ```
 
 ## Seed {#Settings.Seed}
