--- a/content/courses/finansal-ekonometri/2-links-docs.Rmd
+++ b/content/courses/finansal-ekonometri/2-links-docs.Rmd
@@ -65,7 +65,7 @@ outdated <- "no_entry"
 - [wooldridge - R Paketi](`r paste0(ekonometri.i.path, "Package_wooldridge.pdf")`) `r emo::ji(eng)``r fa("r-project", fill = "steelblue")`
 
 ## Diğer Linkler
-- [R mini BootCamp - HTML](https://akademiekonometri.bitbucket.io/R_mini_BootCamp/R_mini_BootCamp.html) `r emo::ji(eng)`
-    + [R mini BootCamp - R](https://akademiekonometri.bitbucket.io/R_mini_BootCamp/R_mini_BootCamp.R) `r emo::ji(eng)`
+- [R mini BootCamp - HTML](`r paste0(io.link, "R_mini_BootCamp/R_mini_BootCamp.html")`) `r emo::ji(eng)`
+    + [R mini BootCamp - R](`r paste0(io.link, "R_mini_BootCamp/R_mini_BootCamp.R")`) `r emo::ji(eng)`
 - [YÖK Dersleri Platformu](https://yokdersleri.yok.gov.tr/) `r emo::ji(tr)`
 - [TÜBA Açık Ders Malzemeleri Portalı](https://acikders.tuba.gov.tr/) `r emo::ji(tr)`
