--- a/content/courses/ekonometri-i/01-ec.Rmd
+++ b/content/courses/ekonometri-i/01-ec.Rmd
@@ -37,10 +37,8 @@ Dersle ilgili önemli duyurulardan zamanında haberdar olabilmeniz için [Telegr
 - [QR Kod - Telefon İçin](`r paste0(ekonometri.i.path, "EC/Ekonometri_I_-_Telegram_Kanali_Duyurusu_Ilan.pdf")`) `r emo::ji(tr)`
 
 ## Ders Planı ve Önemli Günler
-| 1. Öğretim | 2. Öğretim | Yaz Okulu |
-| :--- | :--- | :--- |
-| [Ders Planı](`r paste0(ekonometri.i.path, "EC/Ekonometri_I_1O_-_Ders_Plani.pdf")`) `r emo::ji(tr)` | [Ders Planı](`r paste0(ekonometri.i.path, "EC/Ekonometri_I_2O_-_Ders_Plani.pdf")`) `r emo::ji(tr)` | [Ders Planı](`r paste0(ekonometri.i.path, "EC/Ekonometri_I_-_Ders_Plani.pdf")`) `r emo::ji(tr)``r emo::ji(in.progress)` |
-| [Önemli Günler](`r paste0(ekonometri.i.path, "EC/Ekonometri_I_1O_-_Onemli_Gunler.pdf")`) `r emo::ji(tr)` | [Önemli Günler](`r paste0(ekonometri.i.path, "EC/Ekonometri_I_2O_-_Onemli_Gunler.pdf")`) `r emo::ji(tr)` | [Önemli Günler](`r paste0(ekonometri.i.path, "EC/Ekonometri_I_-_Onemli_Gunler.pdf")`) `r emo::ji(tr)``r emo::ji(in.progress)` |
+- [Ders Planı](`r paste0(ekonometri.i.path, "EC/Ekonometri_I_-_Ders_Plani.pdf")`) `r emo::ji(tr)`
+- [Önemli Günler](`r paste0(ekonometri.i.path, "EC/Ekonometri_I_-_Onemli_Gunler.pdf")`) `r emo::ji(tr)`
 
 ## Ders Kitabı
 - [Kitap Seçimi Açıklaması](`r paste0(ekonometri.i.path, "Ekonometri_I_-_Kitap_Secimi_Aciklamasi.pdf")`) `r emo::ji(tr)`
