--- a/content/courses/zaman-serileri-analizi/01-ec.Rmd
+++ b/content/courses/zaman-serileri-analizi/01-ec.Rmd
@@ -37,10 +37,8 @@ Dersle ilgili önemli duyurulardan zamanında haberdar olabilmeniz için [Telegr
 - [QR Kod - Telefon İçin](`r paste0(zaman.serileri.analizi.path, "EC/Zaman_Serileri_Analizi_-_Telegram_Kanali_Duyurusu_Ilan.pdf")`) `r emo::ji(tr)`
 
 ## Ders Planı ve Önemli Günler
-| 1. Öğretim | 2. Öğretim | Yaz Okulu |
-| :--- | :--- | :--- |
-| [Ders Planı](`r paste0(zaman.serileri.analizi.path, "EC/Zaman_Serileri_Analizi_1O_-_Ders_Plani.pdf")`) `r emo::ji(tr)` | [Ders Planı](`r paste0(zaman.serileri.analizi.path, "EC/Zaman_Serileri_Analizi_2O_-_Ders_Plani.pdf")`) `r emo::ji(tr)` | [Ders Planı](`r paste0(zaman.serileri.analizi.path, "EC/Zaman_Serileri_Analizi_-_Ders_Plani.pdf")`) `r emo::ji(tr)` |
-| [Önemli Günler](`r paste0(zaman.serileri.analizi.path, "EC/Zaman_Serileri_Analizi_1O_-_Onemli_Gunler.pdf")`) `r emo::ji(tr)` | [Önemli Günler](`r paste0(zaman.serileri.analizi.path, "EC/Zaman_Serileri_Analizi_2O_-_Onemli_Gunler.pdf")`) `r emo::ji(tr)` | [Önemli Günler](`r paste0(zaman.serileri.analizi.path, "EC/Zaman_Serileri_Analizi_-_Onemli_Gunler.pdf")`) `r emo::ji(tr)` |
+- [Ders Planı](`r paste0(zaman.serileri.analizi.path, "EC/Zaman_Serileri_Analizi_-_Ders_Plani.pdf")`) `r emo::ji(tr)`
+- [Önemli Günler](`r paste0(zaman.serileri.analizi.path, "EC/Zaman_Serileri_Analizi_-_Onemli_Gunler.pdf")`) `r emo::ji(tr)`
 
 ## Ders Kitabı
 - [Kitap Seçimi Açıklaması](`r paste0(zaman.serileri.analizi.path, "Zaman_Serileri_Analizi_-_Kitap_Secimi_Aciklamasi.pdf")`) `r emo::ji(tr)`
