--- a/content/courses/zaman-serileri-analizi/3-exams-ps.Rmd
+++ b/content/courses/zaman-serileri-analizi/3-exams-ps.Rmd
@@ -32,6 +32,8 @@ outdated <- "no_entry"
 
 ## Ödevler
 - [CANVAS'ta Online Çoktan Seçmeli Ödev Nasıl Yapılır?]() `r emo::ji(tr)``r emo::ji(in.progress)`
+- [Ödev #2 - Örnek Çözüm](`r paste0(zaman.serileri.analizi.r.path, "Problem Set 2_Ornek Cozum.R")`)
+- [Ödev #4 - Örnek Çözüm](`r paste0(zaman.serileri.analizi.r.path, "Problem Set 4_Ornek Cozum.R")`)
 
 ## Sınavlar
 - [Ara Sınav - İnceleme](`r paste0(zaman.serileri.analizi.path, "Zaman_Serileri_Analizi_-_Ara_Sinav_Inceleme.pdf")`) `r emo::ji(tr)``r emo::ji(in.progress)`
