--- a/content/courses/donem-projesi/_index.Rmd
+++ b/content/courses/donem-projesi/_index.Rmd
@@ -1,7 +1,7 @@
 ---
 # Course title, summary, and position.
 linktitle: "Dönem Projesi"
-summary: "Verildiği son bölüm ve dönem: İktisat (YL) - Bahar 2025"
+summary: "Verildiği son bölüm ve dönem: İktisat (YL) - Güz 2024"
 weight: 32
 categories: [Ders]
 tags: [dönem projesi, türkçe, turkish]
