--- a/content/courses/ekonometri-ars-I-II/4-lectures.Rmd
+++ b/content/courses/ekonometri-ars-I-II/4-lectures.Rmd
@@ -36,27 +36,27 @@ outdated <- "no_entry"
 
 ## Akademik Makale Yazım Esasları
 #### Kitaplar ve Makaleler
-- [Akademik Yazım Kuralları Kitapçığı (Kökdemir)](`r paste0(ekonometri.ars.path, "Kokdemir__Akademik Yazim Kurallari Kitapcigi.pdf")`) `r emo::ji(tr)`
-- [Bilimsel Bir Makale Nasıl Yazılır? (Seçkin)](`r paste0(ekonometri.ars.path, "Seckin-(2003a)-Bilimsel Bir Makale Nasil Yazilir-(article).pdf")`) `r emo::ji(tr)`
-- [Bilimsel Makale Nasıl Yazılır? (Yılmaz)](`r paste0(ekonometri.ars.path, "Yilmaz-(2005a)-Bilimsel Makale Nasil Yazilir-(article).pdf")`) `r emo::ji(tr)`
-- [Bilimsel Bir Makale Nasıl Yazılır ve Yayımlanır? (Day)](`r paste0(ekonometri.ars.path, "Day__Bilimsel Bir Makale Nasil Yazilir ve Yayimlanir.pdf")`) `r emo::ji(tr)`
+- [Akademik Yazım Kuralları Kitapçığı (Kökdemir)](`r paste0(ekonometri.ars.path, "Kokdemir__Akademik_Yazim_Kurallari_Kitapcigi.pdf")`) `r emo::ji(tr)`
+- [Bilimsel Bir Makale Nasıl Yazılır? (Seçkin)](`r paste0(ekonometri.ars.path, "Seckin-2003a-Bilimsel_Bir_Makale_Nasil_Yazilir-article.pdf")`) `r emo::ji(tr)`
+- [Bilimsel Makale Nasıl Yazılır? (Yılmaz)](`r paste0(ekonometri.ars.path, "Yilmaz-2005a-Bilimsel_Makale_Nasil_Yazilir-article.pdf")`) `r emo::ji(tr)`
+- [Bilimsel Bir Makale Nasıl Yazılır ve Yayımlanır? (Day)](`r paste0(ekonometri.ars.path, "Day__Bilimsel_Bir_Makale_Nasil_Yazilir_ve_Yayimlanir.pdf")`) `r emo::ji(tr)`
 
 #### Slaytlar
-- [1 - Akademik Makale Yazım Tekniklerine Giriş (MK)](`r paste0(ekonometri.ars.path, "1 - Akademik Makale Yazim Tekniklerine Giris.ppt")`) `r emo::ji(tr)`
-- [2 - Akademik Makale Yazımı (MK)](`r paste0(ekonometri.ars.path, "2 - Akademik Makale Yazimi.ppt")`) `r emo::ji(tr)`
-- [3 - Akademik Makale (MK)](`r paste0(ekonometri.ars.path, "3 - Akademik Makale.ppt")`) `r emo::ji(tr)`
-- [4 - Yazım Öncesi Hazırlık (MK)](`r paste0(ekonometri.ars.path, "4 - Yazim Oncesi Hazirlik.ppt")`) `r emo::ji(tr)`
-- [5 - Başlık (MK)](`r paste0(ekonometri.ars.path, "5 - Baslik.ppt")`) `r emo::ji(tr)`
-- [6 - Yazar İsimleri (MK)](`r paste0(ekonometri.ars.path, "6 - Yazar Isimleri.ppt")`) `r emo::ji(tr)`
-- [7 - Özet (MK)](`r paste0(ekonometri.ars.path, "7 - Ozet.ppt")`) `r emo::ji(tr)`
-- [8 - Giriş (MK)](`r paste0(ekonometri.ars.path, "8 - Giris.ppt")`) `r emo::ji(tr)`
-- [9 - Materyal ve Metotlar (MK)](`r paste0(ekonometri.ars.path, "9 - Materyal ve Metotlar.ppt")`) `r emo::ji(tr)`
-- [10 - Bulgular (MK)](`r paste0(ekonometri.ars.path, "10 - Bulgular.ppt")`) `r emo::ji(tr)`
-- [11 - Tartışma (MK)](`r paste0(ekonometri.ars.path, "11 - Tartisma.ppt")`) `r emo::ji(tr)`
-- [12 - Kaynaklar ve Atıf (MK)](`r paste0(ekonometri.ars.path, "12 - Kaynaklar ve Atif.ppt")`) `r emo::ji(tr)`
+- [1 - Akademik Makale Yazım Tekniklerine Giriş (MK)](`r paste0(ekonometri.ars.path, "1_-_Akademik_Makale_Yazim_Tekniklerine_Giris.ppt")`) `r emo::ji(tr)`
+- [2 - Akademik Makale Yazımı (MK)](`r paste0(ekonometri.ars.path, "2_-_Akademik_Makale_Yazimi.ppt")`) `r emo::ji(tr)`
+- [3 - Akademik Makale (MK)](`r paste0(ekonometri.ars.path, "3_-_Akademik_Makale.ppt")`) `r emo::ji(tr)`
+- [4 - Yazım Öncesi Hazırlık (MK)](`r paste0(ekonometri.ars.path, "4_-_Yazim_Oncesi_Hazirlik.ppt")`) `r emo::ji(tr)`
+- [5 - Başlık (MK)](`r paste0(ekonometri.ars.path, "5_-_Baslik.ppt")`) `r emo::ji(tr)`
+- [6 - Yazar İsimleri (MK)](`r paste0(ekonometri.ars.path, "6_-_Yazar_Isimleri.ppt")`) `r emo::ji(tr)`
+- [7 - Özet (MK)](`r paste0(ekonometri.ars.path, "7_-_Ozet.ppt")`) `r emo::ji(tr)`
+- [8 - Giriş (MK)](`r paste0(ekonometri.ars.path, "8_-_Giris.ppt")`) `r emo::ji(tr)`
+- [9 - Materyal ve Metotlar (MK)](`r paste0(ekonometri.ars.path, "9_-_Materyal_ve_Metotlar.ppt")`) `r emo::ji(tr)`
+- [10 - Bulgular (MK)](`r paste0(ekonometri.ars.path, "10_-_Bulgular.ppt")`) `r emo::ji(tr)`
+- [11 - Tartışma (MK)](`r paste0(ekonometri.ars.path, "11_-_Tartisma.ppt")`) `r emo::ji(tr)`
+- [12 - Kaynaklar ve Atıf (MK)](`r paste0(ekonometri.ars.path, "12_-_Kaynaklar_ve_Atif.ppt")`) `r emo::ji(tr)`
 
 #### Diğer Kaynaklar
-- [Bilimsel Makale Yazım Teknikleri (Uluoğlu)](`r paste0(ekonometri.ars.path, "Uluoglu__Bilimsel Makale Yazim Teknikleri.pdf")`) `r emo::ji(tr)`
+- [Bilimsel Makale Yazım Teknikleri (Uluoğlu)](`r paste0(ekonometri.ars.path, "Uluoglu__Bilimsel_Makale_Yazim_Teknikleri.pdf")`) `r emo::ji(tr)`
 - [Makale Nasıl Yazılır?](https://www.akademikkaynak.com/makale-nasil-yazilir.html) `r emo::ji(tr)`
 
 ## Akademik Makale Sunum Esasları
@@ -64,7 +64,7 @@ outdated <- "no_entry"
 - `r emo::ji(tr)``r emo::ji(in.progress)`
 
 #### Slaytlar
-- [1 - Makale Nasıl Sunulur? (MK)](`r paste0(ekonometri.ars.path, "1 - Makale Nasil Sunulur.ppt")`) `r emo::ji(tr)`
+- [1 - Makale Nasıl Sunulur? (MK)](`r paste0(ekonometri.ars.path, "1_-_Makale_Nasil_Sunulur.ppt")`) `r emo::ji(tr)`
 
 #### Diğer Kaynaklar
 - `r emo::ji(tr)``r emo::ji(in.progress)`
@@ -74,8 +74,8 @@ outdated <- "no_entry"
 - `r emo::ji(tr)``r emo::ji(in.progress)`
 
 #### Slaytlar
-- [1 - Makale Yayınlama Süreci (MK)](`r paste0(ekonometri.ars.path, "1 - Makale Yayinlama Sureci.ppt")`) `r emo::ji(tr)`
-- [2 - Makale Değerlendirme - Editör ve Hakemler (MK)](`r paste0(ekonometri.ars.path, "2 - Makale Degerlendirme__Editor ve Hakemler.ppt")`) `r emo::ji(tr)`
+- [1 - Makale Yayınlama Süreci (MK)](`r paste0(ekonometri.ars.path, "1_-_Makale_Yayinlama_Sureci.ppt")`) `r emo::ji(tr)`
+- [2 - Makale Değerlendirme - Editör ve Hakemler (MK)](`r paste0(ekonometri.ars.path, "2_-_Makale_Degerlendirme__Editor_ve_Hakemler.ppt")`) `r emo::ji(tr)`
 
 #### Diğer Kaynaklar
 - `r emo::ji(tr)``r emo::ji(in.progress)`
@@ -85,14 +85,14 @@ outdated <- "no_entry"
 - `r emo::ji(tr)``r emo::ji(in.progress)`
 
 #### Slaytlar
-- [1 - Tez Nasıl Yazılır? (MK)](`r paste0(ekonometri.ars.path, "1 - Tez Nasil Yazilir.ppt")`) `r emo::ji(tr)`
+- [1 - Tez Nasıl Yazılır? (MK)](`r paste0(ekonometri.ars.path, "1_-_Tez_Nasil_Yazilir.ppt")`) `r emo::ji(tr)`
 
 #### Diğer Kaynaklar
 - `r emo::ji(tr)``r emo::ji(in.progress)`
 
 ## Anket Uygulama Esasları
 #### Kitaplar ve Makaleler
-- [Anket Hazırlama Kılavuzu (Baş)](`r paste0(ekonometri.ars.path, "Bas__Anket Hazirlama Kilavuzu.pdf")`) `r emo::ji(tr)`
+- [Anket Hazırlama Kılavuzu (Baş)](`r paste0(ekonometri.ars.path, "Bas__Anket_Hazirlama_Kilavuzu.pdf")`) `r emo::ji(tr)`
 
 #### Slaytlar
 - `r emo::ji(tr)``r emo::ji(in.progress)`
