--- a/content/courses/ekonometri-ars-I-II/01-ec.Rmd
+++ b/content/courses/ekonometri-ars-I-II/01-ec.Rmd
@@ -45,6 +45,13 @@ Dersle ilgili önemli duyurulardan zamanında haberdar olabilmeniz için [Telegr
 - [Ders Planı](`r paste0(ekonometri.ars.path, "EC/Ekonometri_Ars_II_-_Ders_Plani.pdf")`) `r emo::ji(tr)`
 - [Önemli Günler](`r paste0(ekonometri.ars.path, "EC/Ekonometri_Ars_II_-_Onemli_Gunler.pdf")`) `r emo::ji(tr)`
 
+## Doldurulması Gereken Formlar
+- [Danışman Öğrenci Sözleşmesi Formu - Güz](`r paste0(ekonometri.ars.path, "EC/1_-_Danisman-Ogrenci-Sozlesmesi-Formu_-_Guz.docx")`) `r emo::ji(tr)`
+- [Danışman Öğrenci Sözleşmesi Formu - Bahar](`r paste0(ekonometri.ars.path, "EC/1_-_Danisman-Ogrenci-Sozlesmesi-Formu_-_Bahar.docx")`) `r emo::ji(tr)`
+- [Yapay Zeka Kullanım Beyanı - Güz ve Bahar](`r paste0(ekonometri.ars.path, "EC/3_-_Yapay-Zeka-Kullanim-Beyani.docx")`) `r emo::ji(tr)`
+- [Yazım Şablonu Kontrol Listesi - Güz ve Bahar](`r paste0(ekonometri.ars.path, "EC/4_-_Yazim-Sablonu-Kontrol-Listesi.docx")`) `r emo::ji(tr)`
+- [Haftalık İlerleme Raporu - Güz ve Bahar](`r paste0(ekonometri.ars.path, "EC/5_-_Haftalik-Ilerleme-Raporu.docx")`) `r emo::ji(tr)`
+
 ## Ders Kaynakları
 - [Kaynakların Açıklaması](`r paste0(ekonometri.ars.path, "Ekonometri_Ars_I-II_-_Kaynaklarin_Aciklamasi.pdf")`) `r emo::ji(tr)`
 
