--- a/content/courses/ekonomi/_index.Rmd
+++ b/content/courses/ekonomi/_index.Rmd
@@ -1,7 +1,7 @@
 ---
 # Course title, summary, and position.
 linktitle: "Ekonomi"
-summary: "Verildiği son bölüm ve dönem: Endüstri Mühendisliği - Bahar 2025, Psikoloji - Bahar Bahar 2025 ve Metalurji ve Malzeme Mühendisliği - Bahar 2019"
+summary: "Verildiği son bölüm ve dönem: Endüstri Mühendisliği - Bahar 2026, Psikoloji - Bahar 2025 ve Metalurji ve Malzeme Mühendisliği - Bahar 2019"
 weight: 51
 categories: [Ders]
 tags: [ekonomi, türkçe, turkish]
